--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Life Pathology LAb-Home</title>
+    <title>Healthy Life Pathology Lab-Home</title>
 </head>
 <body>
 <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurte|Reliable|Affordable</h4>
+        <h4>Accurate|Reliable|Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -22,6 +22,13 @@
 
 <!-- Main Section Start -->
     <main>
+        <section>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
+             title="YouTube video player" 
+             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+             picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
         <!-- About Section -->
          <section>
             <h2>About Us</h2>
@@ -48,6 +55,9 @@
                 <li>Thyroid Test</li>
                 <li>Covid-19 Test</li>
             </ul>
+            <picture>
+                <img src="images/blood.jpg">
+            </picture>
           </section>
 
           <!-- Report Section -->
@@ -77,6 +87,12 @@
                 <p>&#128205;<strong>Address:</strong>Pimpri,Pune</p>
                 <p>&#128222;<strong>Phone:</strong>+91 9856324457</p>
                 <p>&#128386;<strong>Email:</strong>healthylife@lab.com</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.
+                637129323634!2d73.79746566147737!3d18.627228729656053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
+                1s0x3bc2b92088476d73%3A0x3770bad11b1f5531!2sLupin%20Diagnostics%20%7C%20Pathology%20Lab%20%26%20
+                Full%20Body%20Checkup%20in%20Pimpri!5e0!3m2!1sen!2sin!4v1767777246232!5m2!1sen!2sin" 
+                width="600" height="450" style="border:0;" 
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
 
     </main>
