--- a/report.html
+++ b/report.html
@@ -9,7 +9,7 @@
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurte|Reliable|Affordable</h4>
+        <h4>Accurate|Reliable|Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -26,11 +26,23 @@
            <section>
              <h2>Download Report</h2>
              <form>
-                <label>Enter Your Report ID to Download Reports</label><br>
+                <h4>Enter Your Details  to Download Report</h4>
+                <label>Patient Name:</label>
+                <input type="text" placeholder="Enter Name"><br><br>
+
+                <label>Doctor Name:</label>
+                <input type="text" placeholder="Doctor Name"><br><br>
+
+                <label>Contact:</label>
+                <input type="tel" placeholder="Phone Number"><br><br>
+
+                <label>Report ID:</label>
                 <input type="number" placeholder="Report ID"><br><br>
+
                 <button  type="submit">Download</submit>
              </form>
            </section>
+
     </main>
     <!-- Main Section End -->
 
