--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurte|Reliable|Affordable</h4>
+        <h4>Accurate|Reliable|Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -24,7 +24,7 @@
     <main>
         <!-- Test Section -->
           <section>
-            <h2>Tests</h2>
+            <h2>Available Tests</h2>
             <ul>
                 <li>Blood Test</li>
                 <li>Urine Test</li>
@@ -32,6 +32,9 @@
                 <li>Thyroid Test</li>
                 <li>Covid-19 Test</li>
             </ul>
+            <picture>
+                <img src="images/blood.jpg">
+            </picture>
           </section>
     </main>
     <!-- Main Section end -->
