--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
    <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurte|Reliable|Affordable</h4>
+        <h4>Accurate|Reliable|Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -33,6 +33,8 @@
                 and experienced staff
                 </pre>
             </p>
+            <h3>Our Mission</h3>
+            <p>To deliver accurate, affordable, and timely diagnostic services.</p>
           </article>
         </section>   
      </main>
