--- a/about.html
+++ b/about.html
@@ -23,20 +23,51 @@
     <!-- Main Section Start  -->
     <main>
     <!-- About Section -->
-        <section>
-          <h2>About Us</h2>
-          <article>
-            <p><pre>
-                We provide high quality 
-                diagnistic services
-                with modern equipment
-                and experienced staff
-                </pre>
-            </p>
-            <h3>Our Mission</h3>
-            <p>To deliver accurate, affordable, and timely diagnostic services.</p>
-          </article>
-        </section>   
+         <section>
+            <h2>About Us</h2>
+            <article>
+                <p><pre>
+                   We provide high quality 
+                   diagnistic services
+                    with modern equipment
+                     and experienced staff
+                  </pre>
+                </p>
+                <h3>Our Mission</h3>
+                <p>To deliver accurate, affordable, and timely diagnostic services.</p>
+                <table border="2" height="150px" width="220px">
+                    <caption>Last 5 Years Patient Visited Records</caption>
+                    <thead>
+                        <tr>
+                            <th>Year</th>
+                            <th>Patient Visited</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2021</td>
+                            <td>3589</td>
+                        </tr>
+                        <tr>
+                            <td>2022</td>
+                            <td>3699</td>
+                        </tr>
+                        <tr>
+                            <td>2023</td>
+                            <td>4089</td>
+                        </tr>
+                        <tr>
+                            <td>2024</td>
+                            <td>4321</td>
+                        </tr>
+                        <tr>
+                            <td>2025</td>
+                            <td>4589</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
+         </section>  
      </main>
      <!-- Main Section End  -->
 
