--- a/report.html
+++ b/report.html
@@ -25,7 +25,9 @@
         <!-- Report Section -->
            <section>
              <h2>Download Report</h2>
-             <form>
+             <fieldset>
+                <legend>Fill This Form</legend>
+                <form>
                 <h4>Enter Your Details  to Download Report</h4>
                 <label>Patient Name:</label>
                 <input type="text" placeholder="Enter Name"><br><br>
@@ -41,6 +43,8 @@
 
                 <button  type="submit">Download</submit>
              </form>
+             </fieldset>
+                
            </section>
 
     </main>
