--- a/test.html
+++ b/test.html
@@ -27,14 +27,39 @@
             <h2>Available Tests</h2>
             <ul>
                 <li>Blood Test</li>
+                <picture>
+                <img src="images/blood.jpg" height="200px" width="200px">
+                </picture>
                 <li>Urine Test</li>
+                <picture>
+                <img src="images/urine.webp" height="200px" width="200px">
+                </picture>
                 <li>Diabetes Test</li>
+                <picture>
+                <img src="images/diabetic.webp" height="200px" width="200px">
+                </picture>
                 <li>Thyroid Test</li>
+                <picture>
+                <img src="images/thyroid-test.webp" height="200px" width="200px">
+                </picture>
                 <li>Covid-19 Test</li>
+                <picture>
+                <img src="images/covid.webp" height="200px" width="200px">
+                </picture>
+            </ul>           
+          </section>
+
+         <!--Speciality section  -->
+          <section>
+            <h2>Our Speciality</h2>
+            <ul type="circle">
+                <li>Fast & Accurate results</li>
+                <p>Reliable & timely testing</p>
+                <li>Experienced Pathologists</li>
+                <p>Expert analysis & diagnosis</p>
+                <li>Advanced Laboratory</li>
+                <p>State of the art equipment</p>
             </ul>
-            <picture>
-                <img src="images/blood.jpg">
-            </picture>
           </section>
     </main>
     <!-- Main Section end -->
