full final web page

--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
     <main>
         <!-- description section -->
          <section>
-            <img src="images/description.webp">
+            <img src="images/description.webp" hegiht=400px width=400px alt="sample view">
             <p><h2>Accurate & Reliable Dignostic Testing</h2>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
          </section><br>
         <!-- video section -->
         <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
+            <h2>Our Work</h2>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
              title="YouTube video player" 
              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
              picture-in-picture; web-share" 
@@ -48,7 +49,7 @@
                 <li>Covid-19 Test</li>
             </ul>
         </section>
-        
+
         <!-- why Choose section -->
         <section>
         <h2>Why Choose Us?</h2>
