--- a/test.html
+++ b/test.html
@@ -28,23 +28,23 @@
             <ul>
                 <li>Blood Test</li>
                 <picture>
-                <img src="images/blood.jpg" height="200px" width="200px">
+                <img src="images/blood.jpg" height="200px" width="200px" alt="blood test">
                 </picture>
                 <li>Urine Test</li>
                 <picture>
-                <img src="images/urine.webp" height="200px" width="200px">
+                <img src="images/urine.webp" height="200px" width="200px" alt="urine test">
                 </picture>
                 <li>Diabetes Test</li>
                 <picture>
-                <img src="images/diabetic.webp" height="200px" width="200px">
+                <img src="images/diabetic.webp" height="200px" width="200px" alt="diabetes test">
                 </picture>
                 <li>Thyroid Test</li>
                 <picture>
-                <img src="images/thyroid-test.webp" height="200px" width="200px">
+                <img src="images/thyroid-test.webp" height="200px" width="200px" alt="thyroid test">
                 </picture>
                 <li>Covid-19 Test</li>
                 <picture>
-                <img src="images/covid.webp" height="200px" width="200px">
+                <img src="images/covid.webp" height="200px" width="200px" alt="covid-19 test">
                 </picture>
             </ul>           
           </section>
@@ -63,6 +63,7 @@
           </section>
     </main>
     <!-- Main Section end -->
+     
      <!-- Footer Section Start -->
     <footer>
         <p>&#169;2026 Healthy Life Pathology Lab. All Rights Reserved</p>
