--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurate|Reliable|Affordable</h4>
+        <h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -63,7 +63,7 @@
           </section>
     </main>
     <!-- Main Section end -->
-     
+
      <!-- Footer Section Start -->
     <footer>
         <p>&#169;2026 Healthy Life Pathology Lab. All Rights Reserved</p>
