--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>Accurate|Reliable|Affordable</h4>
+        <h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4>
         <nav>
             <a href="index.html">Home|</a>
             <a href="about.html">About Us|</a>
@@ -32,7 +32,7 @@
                 637129323634!2d73.79746566147737!3d18.627228729656053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
                 1s0x3bc2b92088476d73%3A0x3770bad11b1f5531!2sLupin%20Diagnostics%20%7C%20Pathology%20Lab%20%26%20
                 Full%20Body%20Checkup%20in%20Pimpri!5e0!3m2!1sen!2sin!4v1767777246232!5m2!1sen!2sin" 
-                width="600" height="450" style="border:0;" 
+                width="400" height="350" style="border:0;" 
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
     </main>
