after adding some css

--- a/report.html
+++ b/report.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
-        <h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4>
+        <hr>
+        <marquee scrollamount="15"><h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4></marquee> 
+        <!-- Navigation bar -->
         <nav>
-            <a href="index.html">Home|</a>
-            <a href="about.html">About Us|</a>
-            <a href="test.html">Tests|</a>
-            <a href="report.html">Reports|</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="test.html">Tests</a>
+            <a href="report.html">Reports</a>
             <a href="contact.html">Contact US</a>
+            
         </nav>
     </header>
    <!-- Header Section End -->
