--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,11 @@
     <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
+        <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
-        <marquee scrollamount="15"><h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4></marquee> 
+        <marquee scrollamount="13">
+          <h4>Welcom to Healthy Life Pathology Lab</h4>
+        </marquee>  
         <!-- Navigation bar -->
         <nav>
             <a href="index.html">Home</a>
