--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <!-- Header Section Start -->
     <header>
         <h1>Healthy Life Pathology Lab</h1>
+        <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
-        <marquee scrollamount="15"><h4>&#9679;Accurate &#9679;Reliable &#9679;Affordable</h4></marquee> 
+        <marquee scrollamount="13">
+          <h4>Welcom to Healthy Life Pathology Lab</h4>
+        </marquee> 
         <!-- Navigation bar -->
         <nav>
             <a href="index.html">Home </a>
@@ -27,14 +30,14 @@
     <main>
         <!-- description section -->
          <section>
-            <img src="images/description.webp" hegiht=400px width=400px alt="sample view">
+            <img src="images/description.webp" hegiht=400px width=350px alt="sample view">
             <p><h2>Accurate & Reliable Dignostic Testing</h2>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
          </section><br>
         <!-- video section -->
         <section>
             <h2>Our Work</h2>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
+            <iframe width="350" height="400" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
              title="YouTube video player" 
              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
              picture-in-picture; web-share" 
