--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <main>
         <!-- description section -->
          <section>
-            <img src="images/description.webp" hegiht=400px width=350px alt="sample view">
+            <img src="images/description.webp" hegiht=400px width=100% alt="sample view">
             <p><h2>Accurate & Reliable Dignostic Testing</h2>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
          </section><br>
         <!-- video section -->
         <section>
             <h2>Our Work</h2>
-            <iframe width="350" height="400" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
+            <iframe width="100%" height="400" src="https://www.youtube.com/embed/1w815ClswG4?si=vxKt7ZE6Xi5c2m1d"
              title="YouTube video player" 
              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
              picture-in-picture; web-share" 
