--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <!-- description section -->
          <section>
             <img src="images/description.webp" hegiht=400px width=100% alt="sample view">
-            <p><h2>Accurate & Reliable Dignostic Testing</h2>Trusted Expert in Laboratory Service</p>
+            <h2>Accurate & Reliable Dignostic Testing</h2>
+            <p>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
          </section><br>
         <!-- video section -->
@@ -59,7 +60,7 @@
             <button>Book Apointment</button>
          </section>
     </main>
-    <!-- Main Section Start -->
+    <!-- Main Section end -->
 
      <!-- Footer Section Start -->
     <footer>
