--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
         <marquee scrollamount="13">
-          <h4>Welcom to Healthy Life Pathology Lab</h4>
+          <h4>Welcom to Healthy Life Pathology Lab!</h4>
         </marquee> 
         <!-- Navigation bar -->
         <nav>
@@ -32,25 +32,25 @@
           <section>
             <h2>Available Tests</h2>
             <ul>
-                <li>Blood Test</li>
-                <picture>
-                <img src="images/blood.jpg" height="200px" width="200px" alt="blood test">
-                </picture>
                 <li>Urine Test</li>
                 <picture>
-                <img src="images/urine.webp" height="200px" width="200px" alt="urine test">
+                <img class="img-size" src="images/urine.webp"  alt="urine test">
                 </picture>
                 <li>Diabetes Test</li>
                 <picture>
-                <img src="images/diabetic.webp" height="200px" width="200px" alt="diabetes test">
+                <img class="img-size" src="images/diabetic.webp" alt="diabetes test">
                 </picture>
                 <li>Thyroid Test</li>
                 <picture>
-                <img src="images/thyroid-test.webp" height="200px" width="200px" alt="thyroid test">
+                <img class="img-size" src="images/thyroid-test.webp"  alt="thyroid test">
                 </picture>
                 <li>Covid-19 Test</li>
                 <picture>
-                <img src="images/covid.webp" height="200px" width="200px" alt="covid-19 test">
+                <img class="img-size" src="images/covid.webp"  alt="covid-19 test">
+                </picture>
+                <li>Blood Test</li>
+                <picture>
+                <img class="img-size" src="images/blood.jpg"  alt="blood test">
                 </picture>
             </ul>           
           </section>
