--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
         <marquee scrollamount="13">
-          <h4>Welcom to Healthy Life Pathology Lab</h4>
+          <h4>Welcom to Healthy Life Pathology Lab!</h4>
         </marquee> 
         <!-- Navigation bar --> 
         <nav>
