--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,22 @@
     <main>
         <!-- Contact Section -->
             <section>
-                <h2>Contact Us</h2>
-                <p>&#128205;<strong>Address:</strong>Pimpri,Pune</p>
+              <h2>Contact Us</h2>
+              <div class="contact">
+                <p id="c_text">&#128205;<strong>Address:</strong>Pimpri,Pune</p>
+
                 <p>&#128222;<strong>Phone:</strong>+91 9856324457</p>
+
                 <p>&#128386;<strong>Email:</strong>healthylife@lab.com</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.
+              </div>
+              <h2>Our Location</h2>
+              <div class="contact" id="map">
+                <iframe id="g_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.
                 637129323634!2d73.79746566147737!3d18.627228729656053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!
                 1s0x3bc2b92088476d73%3A0x3770bad11b1f5531!2sLupin%20Diagnostics%20%7C%20Pathology%20Lab%20%26%20
                 Full%20Body%20Checkup%20in%20Pimpri!5e0!3m2!1sen!2sin!4v1767777246232!5m2!1sen!2sin" 
-                width="400" height="325" style="border:0;" 
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
             </section>
     </main>
    <!--Main Section End  -->
