--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
 <!-- Main Section Start -->
     <main>
         <!-- description section -->
-         <section>
-            <img src="images/description.webp" hegiht=400px width=100% alt="sample view">
-            <h2>Accurate & Reliable Dignostic Testing</h2>
+         <section class="hero">
+            <!-- <img src="images/description.webp" hegiht=400px width=100% alt="sample view"> -->
+          <div class="hero_text">
+            <h2 id="space">Accurate & Reliable Dignostic Testing</h2>
             <p>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
+          </div>
+            
          </section><br>
         <!-- video section -->
         <section>
@@ -63,7 +66,7 @@
     <!-- Main Section end -->
 
      <!-- Footer Section Start -->
-    <footer>
+    <footer id="foot">
         <p>&#169;2026 Healthy Life Pathology Lab. All Rights Reserved</p>
     </footer>
     <!-- Footer Section End -->
