after some changes

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
    <!--Main Section End  -->
 
    <!-- Footer Section Start -->
-    <footer>
+    <footer id="foot">
         <p>&#169;2026 Healthy Life Pathology Lab. All Rights Reserved</p>
     </footer>
    <!-- Footer Section End -->
