--- a/test.html
+++ b/test.html
@@ -91,7 +91,7 @@
     <!-- Main Section end -->
 
      <!-- Footer Section Start -->
-    <footer>
+    <footer id="foot">
         <p>&#169;2026 Healthy Life Pathology Lab. All Rights Reserved</p>
     </footer>
    <!-- Footer Section End -->
