with all new features

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
         <marquee scrollamount="13">
-          <h4>Welcom to Healthy Life Pathology Lab!</h4>
+          <h4>Welcome to Healthy Life Pathology Lab!</h4>
         </marquee> 
         <!-- Navigation bar --> 
         <nav>
@@ -32,16 +32,11 @@
          <section>
             <h2>About Us</h2>
             <article>
-                <p><pre>
-                   We provide high quality 
-                   diagnistic services
-                   with modern equipment
-                   and experienced staff
-                  </pre>
-                </p>
-                <h3>Our Mission</h3>
-                <p>To deliver accurate, affordable, and timely diagnostic services.</p>
-                <table border="2" height="150px" width="220px">
+                <pre>Healthy Life Pathology Lab is committed to providing accurate, reliable, and timely diagnostic services to support better healthcare decisions. Equipped with modern laboratory technology and handled by experiencedprofessionals, we ensure high standards of quality, hygiene, and precision in every test we perform.Our focus is on patient care, affordability, and trust,making advanced pathology services accessible to everyone. At Healthy Life Pathology Lab, your health is our priority.</pre>
+                
+                <h2>Our Mission</h2>
+                   <pre> Our mission at Healthy Life Pathology Lab is to deliver accurate, timely, and reliable diagnostic services that empower doctors and patients to make informed healthcare decisions. We are committed to maintaining the highest standards of quality, ethics, and hygiene while using advanced technology and skilled expertise to ensure affordable and accessible pathology services for all..</pre>
+                <table>
                     <caption>Last 5 Years Patient Visited Records</caption>
                     <thead>
                         <tr>
