--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
         <marquee scrollamount="13">
-          <h4>Welcom to Healthy Life Pathology Lab!</h4>
+          <h4>Welcome to Healthy Life Pathology Lab!</h4>
         </marquee> 
         <!-- Navigation bar -->
         <nav>
@@ -78,13 +78,13 @@
          <!--Speciality section  -->
           <section>
             <h2>Our Speciality</h2>
-            <ul type="circle">
-                <li>Fast & Accurate results</li>
-                <p>Reliable & timely testing</p>
-                <li>Experienced Pathologists</li>
-                <p>Expert analysis & diagnosis</p>
-                <li>Advanced Laboratory</li>
-                <p>State of the art equipment</p>
+            <ul class="outside_ul" type="disk">
+                <li>&#128313;Fast & Accurate results</li>
+                <li class="list_space">Reliable & timely testing</li>
+                <li>&#128313;Experienced Pathologists</li>
+                <li class="list_space">Expert analysis & diagnosis</li>
+               <li>&#128313;Advanced Laboratory</li>
+                <li class="list_space">State of the art equipment</li>
             </ul>
           </section>
     </main>
