--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
         <marquee scrollamount="13">
-          <h4>Welcom to Healthy Life Pathology Lab!</h4>
+          <h4>Welcome to Healthy Life Pathology Lab!</h4>
         </marquee> 
         <!-- Navigation bar -->
         <nav>
@@ -32,7 +32,7 @@
          <section class="hero">
             <!-- <img src="images/description.webp" hegiht=400px width=100% alt="sample view"> -->
           <div class="hero_text">
-            <h2 id="space">Accurate & Reliable Dignostic Testing</h2>
+            <h4 id="space">Accurate & Reliable Dignostic Testing</h4>
             <p>Trusted Expert in Laboratory Service</p>
             <button>Get Started</button>
           </div>
