after Adding some animation

--- a/report.html
+++ b/report.html
@@ -32,7 +32,8 @@
         <!-- Report Section -->
            <section>
              <h2>Download Report</h2>
-             <fieldset>
+             <div class="form_box">
+              <fieldset>
                 <legend>Fill This Form</legend>
                 <form>
                 <label>Patient Name:</label>
@@ -48,8 +49,9 @@
                 <input type="number" placeholder="Report ID"><br><br>
 
                 <button  type="submit">Download</submit>
-             </form>
-             </fieldset>
+              </form>
+              </fieldset>
+             </div>
                 
            </section>
 
