--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy Life Pathology Lab-Home</title>
+    <!-- <link rel="icon" href="images/logo.jpg"> -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
 <!-- Header Section Start -->
     <header>
+        <!-- <div class="logo">
+            <img src="images/logo2.jpeg" alt="logo">
+        </div> -->
+        
         <h1>Healthy Life Pathology Lab</h1>
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
         <hr>
@@ -17,6 +23,7 @@
         </marquee> 
         <!-- Navigation bar -->
         <nav>
+            <i id="menu" class="fa-solid fa-bars"></i>
             <a href="index.html">Home </a>
             <a href="about.html">About Us </a>
             <a href="test.html">Tests </a>
@@ -61,6 +68,18 @@
             <h2>Book Your Apointment Today</h2>
             <p>Schedule your test with our expert team!</p>
             <button>Book Apointment</button>
+         </section>
+
+         <!-- follow us section -->
+         <section class="social_media">
+            <h2>Follow Us On</h2>
+            <div class="social_icons">
+              <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> 
+              <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.twitter.com/"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+              <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
          </section>
     </main>
     <!-- Main Section end -->
