--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tests</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <!-- Header Section Start -->
@@ -87,6 +88,17 @@
                 <li class="list_space">State of the art equipment</li>
             </ul>
           </section>
+          <!-- follow us section -->
+         <section class="social_media">
+            <h2>Follow Us On</h2>
+            <div class="social_icons">
+              <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> 
+              <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://www.twitter.com/"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+              <a href="https://www.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+         </section>
     </main>
     <!-- Main Section end -->
 
