add some effect

--- a/report.html
+++ b/report.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Report</title>
+    <link rel="icon" href="images/logo.jpg">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
@@ -12,19 +13,23 @@
     <header>
         <h1>Healthy Life Pathology Lab</h1>
         <p>&#9679;Accurate &#9679;Reliable &#9679;Affordable</p>
-        <hr>
+        <!-- <hr> -->
+
+        <!-- Navigation bar -->
+        <nav>
+            <i id="menu" class="fa-solid fa-bars"></i>
+            <a href="index.html">Home </a>
+            <a href="about.html">About Us </a>
+            <a href="test.html">Tests </a>
+            <a href="report.html">Reports </a>
+            <a href="contact.html">Contact US</a>
+        </nav>
+        
+        <!-- welcome (marquee tag) -->
         <marquee scrollamount="13">
           <h4>Welcome to Healthy Life Pathology Lab!</h4>
         </marquee>  
-        <!-- Navigation bar -->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="test.html">Tests</a>
-            <a href="report.html">Reports</a>
-            <a href="contact.html">Contact US</a>
-            
-        </nav>
+  
     </header>
    <!-- Header Section End -->
 
